Content added to chapter1

--- a/kulasthree.tex
+++ b/kulasthree.tex
@@ -18,7 +18,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%5
 \tableofcontents
 \input{./chapter/intro.tex}
-
-
+\input{./chapter/1whylearnhistory.tex}
+\input{./chapter/2womenruledarea.tex}
 \end{document}
 
