Replaced images with lower sizes

--- a/kulasthree.tex
+++ b/kulasthree.tex
@@ -20,5 +20,8 @@
 \input{./chapter/intro.tex}
 \input{./chapter/1whylearnhistory.tex}
 \input{./chapter/2womenruledarea.tex}
+\input{./chapter/5dowry.tex}
+\input{./chapter/9newera.tex}
+\input{./chapter/10citizenship.tex}
 \end{document}
 
