Added contents to chapters
Added contents to chapters: 'PennarassuNadu' and 'Sthreekalum Samarangalum'

--- a/kulasthree.tex
+++ b/kulasthree.tex
@@ -23,5 +23,6 @@
 \input{./chapter/5dowry.tex}
 \input{./chapter/9newera.tex}
 \input{./chapter/10citizenship.tex}
+\input{./chapter/11struggles.tex}
 \end{document}
 
