--- a/kulasthree.tex
+++ b/kulasthree.tex
@@ -20,6 +20,7 @@
 \input{./chapter/intro.tex}
 \input{./chapter/1whylearnhistory.tex}
 \input{./chapter/2womenruledarea.tex}
+\input{./chapter/3queensKerala.tex}
 \input{./chapter/5dowry.tex}
 \input{./chapter/9newera.tex}
 \input{./chapter/10citizenship.tex}
