--- a/kulasthree.tex
+++ b/kulasthree.tex
@@ -21,7 +21,9 @@
 \input{./chapter/1whylearnhistory.tex}
 \input{./chapter/2womenruledarea.tex}
 \input{./chapter/3queensKerala.tex}
+\input{./chapter/4chanthappennu.tex}
 \input{./chapter/5dowry.tex}
+\input{./chapter/7defencingfemalebody.tex}
 \input{./chapter/9newera.tex}
 \input{./chapter/10citizenship.tex}
 \input{./chapter/11struggles.tex}
