Added more content to chapter 4

--- a/malayalambook.sty
+++ b/malayalambook.sty
@@ -2,7 +2,7 @@
 \usepackage{polyglossia}
 \usepackage{xcolor} 
 \setdefaultlanguage{malayalam}
-\setmainfont[Script=Malayalam,HyphenChar="0000]{Rachana}
+\setmainfont[Script=Malayalam,HyphenChar="00AD]{Chilanka}
 \lefthyphenmin=1
 \righthyphenmin=2
 \linespread{1.1}
@@ -11,6 +11,7 @@
 \usepackage{float}
 \usepackage{newfloat}
 \usepackage{multicol}
+\usepackage{wrapfig}
 
 
 \usepackage{caption}
