Change font, add graphicx pachage and use sloppy package

--- a/kulasthree.tex
+++ b/kulasthree.tex
@@ -1,6 +1,6 @@
 \documentclass[12pt]{book}
 \usepackage{malayalambook}
-
+\sloppy
 
 \title{\textbf{'കുലസ്ത്രീയും' 'ചന്തപ്പെണ്ണും' ഉണ്ടായതെങ്ങനെ?}}
 \author{ജെ. ദേവിക}
