--- a/malayalambook.sty
+++ b/malayalambook.sty
@@ -1,8 +1,9 @@
 \usepackage{fontspec}
 \usepackage{polyglossia}
 \usepackage{xcolor} 
+\usepackage{graphicx}
 \setdefaultlanguage{malayalam}
-\setmainfont[Script=Malayalam,HyphenChar="00AD]{Chilanka}
+\setmainfont[Script=Malayalam,HyphenChar="00AD]{Manjari}
 \lefthyphenmin=1
 \righthyphenmin=2
 \linespread{1.1}
